--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js", 
+    "test": "mocha ./test/* --exit",
+    "start": "node index.js",
     "dev": "nodemon index.js"
   },
   "repository": {
@@ -19,7 +19,9 @@
   },
   "homepage": "https://github.com/yuri-akira/GitHubActions#readme",
   "devDependencies": {
-    "nodemon": "^2.0.14"
+    "mocha": "^9.1.3",
+    "nodemon": "^2.0.14",
+    "supertest": "^6.1.6"
   },
   "dependencies": {
     "@splitsoftware/splitio": "^10.16.1",
